[metadata]
name = octavia-f5-provider-driver
summary = F5 Networks Provider Driver for OpenStack Octavia
description-file =
    README.rst
author = Andrew Karpow (SAP SE)
author-email = andrew.karpow@sap.com
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    octavia_f5

[wheel]
universal = 1

[entry_points]
octavia.api.drivers =
    f5 = octavia_f5.api.drivers.f5_driver.driver:F5ProviderDriver
octavia.plugins =
    f5_potato_plugin = octavia_f5.controller.worker.controller_worker:ControllerWorker
octavia.network.drivers =
    hierarchical_port_binding_driver = octavia_f5.network.drivers.neutron.hierarchical_port_binding:HierachicalPortBindingDriver
console_scripts =
    octavia-f5-db-manage = octavia_f5.db.migration.cli:main
    octavia-f5-worker = octavia_f5.cmd.f5_agent:main
